fix prompt layout issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,7 +79,7 @@
 }
 
 .black_btn {
-  @apply rounded-full bg-transparent py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-base font-inter flex items-center justify-center;
+  @apply rounded-full bg-transparent py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-base flex items-center justify-center;
 }
 
 .outline_btn {
@@ -119,7 +119,7 @@
 }
 
 .prompt_layout {
-  @apply space-y-6 py-1 sm:columns-2 sm:gap-6 xl:columns-3;
+  @apply grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-6 py-1 sm:gap-6 xl:gap-6;
 }
 
 /* Feed Component */
@@ -151,7 +151,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 break-inside-avoid rounded-lg border md:w-[360px] border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter w-full ;
 }
 
 .flex-center {
@@ -175,4 +175,8 @@
         grid-column: auto/span 2;
         grid-row: auto/span 2;
     }
+}
+
+.prompt_card:last-child {
+  @apply  sm:col-span-2 xl:col-span-1;
 }
